Fixed the license error message not showing correct in latest Firefox, remove position absolute, also use p tag to show message instead of div.

--- a/RS/Reporting/ReportManager/ReportManagerMVC/ReportManager/Forerunner/Bundles/Forerunner-all.css
+++ b/RS/Reporting/ReportManager/ReportManagerMVC/ReportManager/Forerunner/Bundles/Forerunner-all.css
@@ -1,4 +1,4 @@
-.fr-layout-container { /*min-height: 100%;*/ background-color: transparent; position: relative; padding: 0px; border: 0px; }
+﻿.fr-layout-container { /*min-height: 100%;*/ background-color: transparent; position: relative; padding: 0px; border: 0px; }
   .fr-layout-container table, td, tr { padding: 0px; margin: 0px; border: 0px; z-index: 0; }
 
 .fr-layout-mainviewport { z-index: 1; display: inline-block; overflow-y: visible; padding: 0px; margin: 0px; border: 0px; width: 100%; }
@@ -1697,7 +1697,7 @@ ul.fr-nav-container { display: block; white-space: nowrap; vertical-align: top; 
 
 .fr-render-find-highlight { background-color: Highlight; color: HighlightText; }
 .fr-render-bglayer { position: absolute; width: 100%; height: 100%; left: 0; top: 0; z-index: -1; }
-.fr-render-error-license { margin: 16px 8px; width: 100%; position: absolute; font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; }
+.fr-render-error-license { margin: 16px 8px; font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; }
 .fr-render-error-license-title { margin: 0px 4px; font-size: 22px; padding: 4px; color: lightslategray; }
 .fr-render-error-license-content { font-size: 14px; margin: 0px 4px; padding: 4px; color: black; }
 .fr-render-error-license-link { width: 200px; margin: 8px; padding: 6px 0px 6px 18px; }
